--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,14 @@ h2 {
 
 #xfirst_bttn {
 background-color: violet;
-width: 80px;
-
+width: 100px;
+height: 50px;
 
 }
 
 #ofirst_bttn {
   background-color: dodgerblue;
-  width: 80px;
+  width: 100px;
+  height: 50px;
+  font size:
 }
