--- a/css/styles.css
+++ b/css/styles.css
@@ -78,3 +78,15 @@ font-size: 20px;
   height: 50px;
   font-size: 20px;
 }
+
+#x-score {
+  font-size: 30px;
+}
+
+#o-score {
+  font-size: 30px;
+}
+
+#style-me {
+  font-size: 30px;
+}
