--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,8 @@ h2 {
 }
 
 #xfirst_bttn {
-background-color: violet;
+border: 4px solid violet;
+background-color: white;
 border-radius: 25px;
 width: 100px;
 height: 50px;
